# gpt2-from-scratch-pytorch

./: README.md  cfg_gpt2.py  feedforward.py  gelu.py  generation.py  gpt2.py  load_data.py  loss.py  main.py  multiheadattention.py  pyproject.toml  tokenizator.py  trainer.py  transfromer_block.py
data/: onegin.txt
data/gutenberg/: alice_in_wonderland.txt  frankenstein.txt  moby_dick.txt  pride_and_prejudice.txt  sherlock_holmes.txt  tale_of_two_cities.txt
